--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 			"app/commands",
 			"app/controllers",
 			"app/models",
+			"app/library",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
