--- a/workbench/bbdo/ymltranslator/composer.json
+++ b/workbench/bbdo/ymltranslator/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "classmap": [
-            "src/migrations"
+            "src"
         ],
         "psr-0": {
             "Bbdo\\YmlTranslator\\": "src/"
