trying to fix Yaml composer hell

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
 			"app/tests/TestCase.php"
 		]
 	},
+  "psr-0": {
+    "Bbdo": "app/library"
+  },
 	"scripts": {
 		"post-install-cmd": [
 			"php artisan clear-compiled",
