--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "matchdep": "*",
+    "grunt": "~0.4.5",
+    "matchdep": "0.3.0",
 
-    "grunt-sass": "*",
+    "coffeeify": "1.0.0",
+    "grunt-browserify": "3.2.0",
+
+    "grunt-sass": "0.15",
     "grunt-sass-convert": "*",
 
     "grunt-contrib-coffee": "*",
@@ -16,7 +19,8 @@
     "grunt-contrib-clean": "*",
     "grunt-concurrent": "*",
     "grunt-contrib-concat": "*",
-    "grunt-contrib-uglify": "*",
+    "grunt-contrib-uglify": "0.6.0",
+    "grunt-contrib-handlebars": "*",
     "grunt-notify": "*",
     "grunt-newer": "*"
   }
